apps/wazuh/base/wazuh-dashboard-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wazuh-dashboard-oidc
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: keycloak
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: server
          app.kubernetes.io/instance: keycloak
  podSelector:
    matchLabels:
      app: wazuh-dashboard
  policyTypes:
  - Egress
